[gd_scene load_steps=4 format=3 uid="uid://du2fpyrkvd3ek"]

[ext_resource type="Script" uid="uid://d2laprucihhkp" path="res://SaucePan.gd" id="1_hpb5m"]

[sub_resource type="BoxMesh" id="BoxMesh_51bd8"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_xps4u"]
size = Vector3(0.5, 0.5, 0.5)

[node name="MeshInstance3D" type="MeshInstance3D"]
mesh = SubResource("BoxMesh_51bd8")
script = ExtResource("1_hpb5m")

[node name="RigidBody3D" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_xps4u")

[node name="BurningTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="CookingTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="BurningTimer" to="." method="_on_burning_timer_timeout"]
[connection signal="timeout" from="CookingTimer" to="." method="_on_cooking_timer_timeout"]
